<resources>
    <string name="app_name">Zpirit</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="ph_number">Phone number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="loading">Loading. . . .</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_fav">Favourites</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="personal_details">Personal details</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="happy_drinking">Happy Drinking!</string>
    <string name="rate_order">Rate Order</string>
    <string name="write_your_feedback">Write your feedback here...</string>


    <string name="drinks">Drinks</string>
    <string name="snacks">Snacks</string>
    <string name="select_drink_type">Select drink type</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart_text">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="address_book">Address book</string>
    <string name="make_payment">Make Payment</string>
    <string name="total_amount">Total</string>
    <string name="select_delivery_address">Delivery address</string>
    <string name="payment_method">Payment method</string>
    <string name="payment_method_text">Debit card, Credit card, UPI, Wallets</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_placed_two">Your order has been successfully placed.</string>
    <string name="shop_more">Shop for more</string>
    <string name="go_to_your_orders">Go to your orders</string>
    <string name="check_details_fororder">Check your order details here</string>
    <string name="add_address">Add Address</string>
    <string name="enter_address_details">Enter address details</string>
    <string name="personal_details_change">Edit personal details</string>
    <string name="select_delivery_address_text">Select delivery address</string>
    <string name="delivery_charges">Select delivery address</string>
    <string name="personal_bio">Bio</string>

    <!-- Product detail strings -->
    <string name="product_info">Product info</string>
    <string name="product_not_found">Product type not found..</string>
    <string name="product_info_testtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <!--Razor pay details-->
    <string name="razor_pay_test_key">rzp_test_5Bw6OUKxv7L2LR</string>
    <string name="razor_pay_live_key">rzp_live_u3Ae8GQIyReAy6</string>


    <!--Address dialogbox hints-->
    <string name="hint_house_number">House number*</string>
    <string name="hint_floor">Floor*</string>
    <string name="hint_tower_block">Tower/Block*</string>
    <string name="hint_how_to_reach">How to reach(Optional)</string>
    <string name="hint_customized_tag">Tag(Friend’s house, My House)</string>
    <string name="save_address">Save address</string>
    <string name="update_details">Update</string>


    <!--Notifs strings-->
    <string name="notif_channel_marketing_id">0</string>
    <string name="notif_channel_marketing">Marketing</string>

    <string name="notif_channel_alerts_id">1</string>
    <string name="notif_channel_alerts">Alerts</string>

    <string name="notif_channel_reminders_id">2</string>
    <string name="notif_channel_reminders">Reminders</string>


</resources>