<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_white_bg2"
    android:paddingVertical="@dimen/_20_dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llEnterPersoanlDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_10_dp"
                android:weightSum="1"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEnterPersonalDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:fontFamily="@font/sfproroundedmedium"
                    android:text="@string/personal_details_change"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20_sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/tvCloseDialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.9"
                    android:padding="@dimen/_10_dp"
                    android:src="@drawable/ic__cross" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:id="@+id/dividingView"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey"
                app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llPersonalDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20_dp"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/_20_dp"
                app:layout_constraintTop_toBottomOf="@id/dividingView">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_etfName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:fontFamily="@font/sfproroundedregular"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/textsize_17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/dividingView1"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_etlName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:fontFamily="@font/sfproroundedregular"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/textsize_17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/dividingView2"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_etEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmailAddress"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:fontFamily="@font/sfproroundedregular"
                        android:textSize="@dimen/textsize_17sp" />

                </com.google.android.material.textfield.TextInputLayout>
                <View
                    android:id="@+id/dividingView3"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_etPhNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#CCCCCC"
                    android:hint="@string/ph_number">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPhoneNumber"
                        android:layout_width="match_parent"
                        android:maxLines="1"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sfproroundedregular"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/textsize_17sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/dividingView4"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_etBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/personal_bio">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etBio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:fontFamily="@font/sfproroundedregular"
                        android:maxLines="1"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/textsize_17sp" />
                </com.google.android.material.textfield.TextInputLayout>



                <View
                    android:id="@+id/dividingView5"
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginVertical="@dimen/_10_dp"
                    android:background="@color/grey"
                    app:layout_constraintTop_toBottomOf="@id/llEnterAddressDetails" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btUpdateDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:background="@drawable/btbg"
                    android:fontFamily="@font/sfproroundedmedium"
                    android:text="@string/update_details"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>